// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyValue should be not edidable 1`] = `
<div>
  <div class="form-group">
    <div class="form-group"><input class="ddm-field-text form-control" name="keyValueLabelkeyValue" type="text" value=""></div>
    <div class="active form-text key-value-editor"><label class="control-label key-value-label">field-name:</label><input class="key-value-input" type="text" value="undefined"></div>
  </div>
</div>
`;

exports[`KeyValue should have a helptext 1`] = `
<div>
  <div class="form-group">
    <div class="form-group"><input class="ddm-field-text form-control" name="keyValueLabelkeyValue" type="text" value=""></div>
    <div class="active form-text key-value-editor"><label class="control-label key-value-label">field-name:</label><input class="key-value-input" type="text" value="undefined"></div><span class="form-text">Type something</span>
  </div>
</div>
`;

exports[`KeyValue should have a label 1`] = `
<div>
  <div class="form-group"><label>label </label>
    <div class="form-group"><input class="ddm-field-text form-control" name="keyValueLabelkeyValue" type="text" value=""></div>
    <div class="active form-text key-value-editor"><label class="control-label key-value-label">field-name:</label><input class="key-value-input" type="text" value="undefined"></div>
  </div>
</div>
`;

exports[`KeyValue should have a predefined Value 1`] = `
<div>
  <div class="form-group">
    <div class="form-group"><input class="ddm-field-text form-control" name="keyValueLabelkeyValue" type="text" placeholder="Option 1" value=""></div>
    <div class="active form-text key-value-editor"><label class="control-label key-value-label">field-name:</label><input class="key-value-input" type="text" value="undefined"></div>
  </div>
</div>
`;

exports[`KeyValue should have a spritemap 1`] = `
<div>
  <div class="form-group">
    <div class="form-group"><input class="ddm-field-text form-control" name="keyValueLabelkeyValue" type="text" value=""></div>
    <div class="active form-text key-value-editor"><label class="control-label key-value-label">field-name:</label><input class="key-value-input" type="text" value="undefined"></div>
  </div>
</div>
`;

exports[`KeyValue should have a value 1`] = `
<div>
  <div class="form-group">
    <div class="form-group"><input class="ddm-field-text form-control" name="keyValueLabelkeyValue" type="text" value="value"></div>
    <div class="active form-text key-value-editor"><label class="control-label key-value-label">field-name:</label><input class="key-value-input" type="text" value="undefined"></div>
  </div>
</div>
`;

exports[`KeyValue should have an id 1`] = `
<div>
  <div class="form-group">
    <div class="form-group"><input class="ddm-field-text form-control" name="keyValueLabelkeyValue" type="text" value=""></div>
    <div class="active form-text key-value-editor"><label class="control-label key-value-label">field-name:</label><input class="key-value-input" type="text" value="undefined"></div>
  </div>
</div>
`;

exports[`KeyValue should not be required 1`] = `
<div>
  <div class="form-group">
    <div class="form-group"><input class="ddm-field-text form-control" name="keyValueLabelkeyValue" type="text" value=""></div>
    <div class="active form-text key-value-editor"><label class="control-label key-value-label">field-name:</label><input class="key-value-input" type="text" value="undefined"></div>
  </div>
</div>
`;

exports[`KeyValue should render Label if showLabel is true 1`] = `
<div>
  <div class="form-group"><label>text </label>
    <div class="form-group"><input class="ddm-field-text form-control" name="keyValueLabelkeyValue" type="text" value=""></div>
    <div class="active form-text key-value-editor"><label class="control-label key-value-label">field-name:</label><input class="key-value-input" type="text" value="undefined"></div>
  </div>
</div>
`;

exports[`KeyValue should render component with a key 1`] = `
<div>
  <div class="form-group">
    <div class="form-group"><input class="ddm-field-text form-control" name="keyValueLabelkeyValue" type="text" value=""></div>
    <div class="active form-text key-value-editor"><label class="control-label key-value-label">field-name:</label><input class="key-value-input" type="text" value="key"></div>
  </div>
</div>
`;
